1st commit--weird message
I see a red message in UI.html in <i class="icon-camera-retro"></i>  …
i dont know what it is

--- a/UI.html
+++ b/UI.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" href="/fonts/font-awesome/css/font-awesome.css">
+	<link rel="stylesheet" href="/fonts/font-spacewalk/css/spacewalk-font.css">
+	<link rel="stylesheet/less" href="/css/bootstrap/less/spacewalk.less">
+	<!--[if IE 7]>
+ 		<link rel="stylesheet" href="/font-awesome/css/font-awesome-ie7.min.css">
+	<![endif]-->
+	<script src="/js/less.js"></script>
+	<script src="/js/jquery.js"></script>
+	<script src="/js/html5shiv.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="/assets/css/normalize.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Spacewalk</title>
+</head>
+<body>
+
+	<div class="container">
+		<h1>This is a test...and it works!</h1>
+		<a class="btn">Hello</a>
 		<i class="icon-camera-retro"></i>
+		<hr />
+		<h2>Trying out the new icons</h2>
+		<div class="btn btn-success"><span class="spacewalk-icons-BS-virtual-guest"></span> this is the Virtual Host icon</div>
+		<hr>
+		<h2>Trying FontAwesome</h2>
+		<div class="btn btn-success"><i class="icon-road icon-2x"></i> Icon from FontAwesome</div>
+		<hr>
+		<h2>
+			Table with border
+		</h2>
+		<table class="table table-bordered table-hover table-condensed">
+			<thead>
+				<tr>
+					<th>cel 1</th>
+					<th>cel 2</th>
+					<th>cel 3</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>text 1 text 1 text 1 text 1 text 1 </td>
+					<td>text 2 text 2 text 2 text 2 text 2 text 2 text 2 </td>
+					<td>text 3 text 3 </td>
+				</tr>
+			</tbody>
+		</table>
+		<hr>
+		<h2>
+			Table with NO borders (for inner tables)
+		</h2>
+		<table class="table table-hover table-condensed">
+			<thead>
+				<tr>
+					<th>cel 1</th>
+					<th>cel 2</th>
+					<th>cel 3</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>text 1 text 1 text 1 text 1 text 1 </td>
+					<td>text 2 text 2 text 2 text 2 text 2 text 2 text 2 </td>
+					<td>text 3 <a href="#">This is a link</a> </td>
+				</tr>
+			</tbody>
+		</table>
+		<hr>
+		<a href="#">This is a link</a>
+	</div>
+
+
+
+	<header>ss</header>
+	<div class="container"></div>
+	<footer>ss</footer>
+</body>
+</html>
