--- a/UI.html
+++ b/UI.html
@@ -18,7 +18,7 @@
 <body>
 
 	<div class="container">
-		<h1>This is a test...and it works!</h1>
+		<h1>This is a test of Twitter Bootstrap...and it works!</h1>
 		<a class="btn">Hello</a>
 		<i class="icon-camera-retro"></i>
 		<hr />
