--- a/toolbar-up.html
+++ b/toolbar-up.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" href="/fonts/font-awesome/css/font-awesome.css">
 	<link rel="stylesheet" href="/fonts/font-spacewalk/css/spacewalk-font.css">
-	<link rel="stylesheet/less" href="/css/spacewalk2.less">
+	<link rel="stylesheet/less" href="/css/spacewalk.less">
 	<!--[if IE 7]>
  		<link rel="stylesheet" href="/font-awesome/css/font-awesome-ie7.min.css">
 	<![endif]-->
