--- a/login.html
+++ b/login.html
@@ -71,16 +71,12 @@
 	<div class="row body-container">
 		<aside>
 			<nav id="sidenav">
-
-
-
-
 			</nav>
 		</aside>
 		<section class="col-md-10 text-center">
 			<h1>Wellcome to Spacewalk</h1>
 			<p>Spacewalk is an open source (GPLv2) Linux systems management solution. Below are some links that should prove useful if you have any questions regarding your Spacewalk server.</p>
-			<form role="form" id="loginForm" class="form-horizontal col-md-6 col-md-offset-3 text-left" method="post" action="/rhn/LoginSubmit.do">
+			<form role="form" id="loginForm" class="form-horizontal col-md-6 col-md-offset-3 text-left" action="index.html">
 			    <input type="hidden" name="csrf_token" value="7092206047513696686">
 			    <div class="form-group">
 					<label for="username-field" class="col-xs-5 control-label">Spacewalk Login: </label>
