Footer sticks to the bottom
changes in Jquery and Less

--- a/UI.html
+++ b/UI.html
@@ -34,7 +34,7 @@
 		<hr>
 		<a href="#">This is a link</a>
 		<hr />
-		<h2>Tables: using <strong>clas="table-rounded"</strong></h2>
+		<h2>Tables: using <strong>class="table table-rounded"</strong></h2>
 		<table class="table table-rounded">
 		  <thead>
 		    <tr>
@@ -96,7 +96,7 @@
 		    </tr>
 		  </tbody>
 		</table>
-		<h1>Table with <strong>class="table-rounded" </strong> and contextual classes from Bootstrap inside the &lt;tr&gt;</H1>
+		<h1>Table with <strong>class="table table-hover table-rounded" </strong> and contextual classes inside the &lt;tr&gt;</H1>
 		<table class="table table-hover table-rounded">
 		  <thead>
 		    <tr>
@@ -248,6 +248,7 @@
 		  </tbody>
 		</table>
 		<hr>
+		<h2>class="table table-rounded table-condensed"</h2>
 		<table class="table table-rounded table-condensed">
 		  <thead class="shadowText">
 		    <tr>
@@ -307,7 +308,8 @@
 		  </tbody>
 		</table>
 		<hr>
-		<table class="table-rounded">
+		<h2>class="table table-rounded"</h2>
+		<table class="table table-rounded">
 			<thead>
 				<tr>
 					<th>one column</th>
@@ -345,7 +347,7 @@
 			</tbody>
 		</table>
 		<hr>
-		<h2>Table with Bootstrap styles</h2>
+		<h2>Table with class="table table-hover"otstrap styles</h2>
 		<table class="table table-hover">
 			<thead>
 				<tr>
@@ -367,6 +369,7 @@
 			</tr>
 		</table>
 		<hr>
+		<h2>class="table table-condensed table-bordered"</h2>
 		<table class="table table-condensed table-bordered">
 			<thead>
 				<tr>
