--- a/login.html
+++ b/login.html
@@ -11,8 +11,9 @@
 	<script src="/js/jquery.js"></script>
 	<script src="/js/html5shiv.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="/assets/css/normalize.css">
+	<link rel="stylesheet" href="/css/normalize.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="js/spacewalk-essentials.js"></script>
 	<script>
 	$(document).on("ready", function(){
 		$("aside").remove();
