--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
 		</section>
 	</div>
 	<footer class="row">
-		<div class="col-md-2"></div>
-		<div class="col-md-8 text-center">
+		<div class="col-xs-2"></div>
+		<div class="col-xs-8 text-center">
 			<p>Copyright Notice - Spacewalk theme Bootstrap 1.0</p>
 		</div>
-		<div class="col-md-2 text-right"><img src="img/logo_vendor.png" /></div>
+		<div class="col-xs-2 text-right"><img src="img/logo_vendor.png" /></div>
 	</footer>
 </body>
 </html>
