--- a/overview.html
+++ b/overview.html
@@ -7,10 +7,10 @@
 	<!--[if IE 7]>
  		<link rel="stylesheet" href="/font-awesome/css/font-awesome-ie7.min.css">
 	<![endif]-->
-	<script src="/js/less.js"></script>
-	<script src="/js/jquery.js"></script>
-	<script src="/js/html5shiv.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
+	<script src="js/less.js"></script>
+	<script src="js/jquery.js"></script>
+	<script src="js/html5shiv.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="/css/normalize.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="js/spacewalk-essentials.js"></script>
