--- a/UI.html
+++ b/UI.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="/fonts/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" href="/fonts/font-spacewalk/css/spacewalk-font.css">
-	<link rel="stylesheet/less" href="/css/spacewalk.less">
+	<link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.css">
+	<link rel="stylesheet" href="fonts/font-spacewalk/css/spacewalk-font.css">
+	<link rel="stylesheet/less" href="css/spacewalk.less">
 	<!--[if IE 7]>
  		<link rel="stylesheet" href="/font-awesome/css/font-awesome-ie7.min.css">
 	<![endif]-->
-	<script src="/js/less.js"></script>
-	<script src="/js/jquery.js"></script>
-	<script src="/js/html5shiv.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
+	<script src="js/less.js"></script>
+	<script src="js/jquery.js"></script>
+	<script src="js/html5shiv.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript">
 		$(document).on("ready",function(){
 			$(".table-rounded").wrap("<div class='table-responsive'>");
 		});
 	</script>
-	<link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="css/normalize.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Spacewalk</title>
 </head>
